# mosaico

./: .gitignore  CONTRIBUTING.md  CORE_CONCEPTS.md  README.md
mosaico-sdk-py/: .gitignore  README.md  pyproject.toml
mosaico-sdk-py/doc-md/: communication.md  handlers.md  ontology.md  queries.md  ros_bridge.md
mosaicod/: Cargo.toml  README.md  env.devel
mosaicod/.sqlx/: query-06fc471e1d74f31e95dd33f8aae6a5066cc0973cab72fdfd5fbda520d6f32f63.json  query-232524cc9971d48a6c6ea7cdbe022afa67a3b7770d34a073f54b314596407e34.json  query-2e296f4cecbf6587f642747a00b6d7bc1c5b48fbc25aa3b97ab6b9077ea6d583.json  query-2eb6f9460f1dd7957476cf5bedc302338768dad4630ea52093577d4a8184132c.json  query-3c93eba4c929676c3ad9a0a47ee26b02dee8828759bd2a542b752f1ab3302284.json  query-41262aba7c5bb8a917da064e18fb460266b5e21a50d241324057d829cf871334.json  query-476101a1364b88e2dd419743edbde6183f86f6f1c1bf463a4bc57376ca6a908c.json  query-5a077b5b7b4faab14fe702fddd8f4f0b7302beae49dbc58f4b07a1da4e8fbe97.json  query-5b60dbd21dcbfe36f33796fd3627501370938d249f643307fff137c9809ccb44.json  query-5e52213a4ec87e8b6147f4980cb31ff3da0ed374700bfb62f04b6c4a96d34ed4.json  query-61a4bc9a85f390ba69f2a15ed9b6ea06bcfa2068682d2f72f17222c6ae388025.json  query-7b0cafff0b65a4b1257d353bc6ea37ea05fb6ebded3cfc15dd590a48dfb10c42.json  query-7d43adb311159763dd9e7c7c5fdabbf80db2b847d11585ceac3c0209610a6797.json  query-7dc50c24b53dd63e861ef436a77f4e3e2a3707a687504300031eb6cbb1d6ce62.json  query-8496d2bc62be3f0b4db3d0f8aebbaf13a51fe52880e54d19677cd6efb22d8e73.json  query-87e47fa3059b39e0ec5d983b55acedac54a85e805263737ef4290ab874fa51c1.json  query-892b9766d9ab7f55a60d641dc8021984571963278d7a3090dedc74eabd90614c.json  query-8ad034f700b6afbd0a4bbf68bf916fa94757f0350cbfb79c3f5c5cb1c59754bd.json  query-9319c99183623b159cafed1d204b6132bdcd8e331e1580acf24bacf6891d22ab.json  query-93eb1351f4a4f81e82cb3313080ba65cd61a4c26efe961aa6647d1390d4a12ec.json  query-94c6b5efb624a1035f922e0e00764661810af0a93e175fddc46981fbacffebac.json  query-9798c177bb39ff3f1c923d9c00121bb6e9d0c0ce1bca57280a9239fafc519a96.json  query-9993ffe99bc6c3c6941807301bcc98dd2b39c9e00548609f6c0860d8e1d0229a.json  query-9e645447f46240738c8b56f8933a2c59e68c2cf24c2eaa62d9a690f4446ad85d.json  query-a63e03fe17aab91e0aa00215bce7c83fed5b94d01c4ca83b70295be64f68e9a0.json  (+9 more)
(+182 files in other folders)
